re-fix css input on ios

--- a/public/styles/elements/_forms.scss
+++ b/public/styles/elements/_forms.scss
@@ -6,6 +6,14 @@
       margin-bottom: s(0.5);
     }
     input {
+      -webkit-appearance: none;
+      appearance: none;
+      vertical-align: middle;
+      color: inherit;
+      font: inherit;
+      margin: 0;
+      outline: 0;
+      text-align: inherit;
       width: 100%;
       margin-bottom: s(1);
       padding: s(1);
